syntax = "proto3";
package rafay.dev.types.system.v3;

import "google/protobuf/struct.proto";
import "proto/types/commonpb/v3/common.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

message PartnerSpec {
  string host = 1;
  string domain = 2;
  string tosLink = 3;
  string logoLink = 4;
  string notificationEmail = 5;
  string helpdeskEmail = 6;
  string productName = 7;
  string supportTeamName = 8;
  string opsHost = 9;
  string favIconLink = 10;
  bool isTOTPEnabled = 11;
  google.protobuf.Struct settings = 12;
}

message Partner {
  string apiVersion = 1; // default: core.rafay.dev/v3
  string kind = 2; // default: Partner
  rafay.dev.types.common.v3.Metadata metadata = 3;
  PartnerSpec spec = 4;
  rafay.dev.types.common.v3.Status status = 5
      [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        title : "Status",
        description : "Status of the resource"
        read_only : true
      } ];
}